metadata/force-app/main/default/objects/CustomName_odstR__c/CustomName_odstR__c.object-meta.xml
<CustomObject>
    <description>Description_jwPDv</description>
    <label>CustomLabel_gISZR</label>
    <nameField>
        <label>CustomLabel_gISZR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_gISZRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>