metadata/force-app/main/default/objects/CustomName_odstR__c/fields/CustomField_aEwxM__c.field-meta.xml
<CustomField>
    <fullName>CustomField_aEwxM__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldifIda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>